--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,174 +1,21 @@
-.icon_like,
-.icon_share {
-    max-width: 28px;
-    max-height: 28px;
-    display: block;
-}
-
-#likes {
-    color: red;
-    display: block;
-}
-
-#shares {
-    color: green;
-    display: block;
-}
-
-.image_top {
-    max-width: 25em;
-}
-
-.image_top:hover {
-    opacity: 50%;
-    transition: 0.4s;
-}
-
-.image_top:not(:hover) {
-    transition: 0.4s;
-}
-
-#top_listes {
-    background-color: #212223;
-    padding: 2em;
-}
-
-#top1 {
-    padding-right: 2em;
-}
-
-li {
-    list-style: none;
-    padding: 1%;
-}
-
-.middle {
-    background-color: #097ce7;
-    flex-grow: 1;
-    max-width: 2px;
-    z-index: 0;
-}
-
-body {
-    font-family: sans-serif;
-    font-size: 11px;
-    line-height: 1.5em;
-    color: #aaa;
-}
-#mainContainer {
+.mainContainer {
+    background-color: #2e3032;
     padding-top: 2vh;
     margin-bottom: 2vh;
+    margin-top: 2vh;
 }
 
 .container {
     background-color: #2e3032;
-    border-radius: 4px;
 }
 
-#carousel,
-#navigation {
-    flex: initial;
-    display: block;
-}
-
-#carousel {
-    overflow: hidden;
-    width: 30vw;
-    height: 40vh;
-    border-radius: 4px;
-}
-
-.p-wrapper {
-    width: 100%;
-    height: 100%;
-    transition: transform 0.4s ease-in-out;
-}
-
-#button_1:checked ~ #carousel .p-wrapper {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-}
-
-#button_2:checked ~ #carousel .p-wrapper {
-    -webkit-transform: translateY(-100%);
-    transform: translateY(-100%);
-}
-
-#button_3:checked ~ #carousel .p-wrapper {
-    -webkit-transform: translateY(-200%);
-    transform: translateY(-200%);
-}
-
-#button_4:checked ~ #carousel .p-wrapper {
-    -webkit-transform: translateY(-300%);
-    transform: translateY(-300%);
-}
-
-#button_5:checked ~ #carousel .p-wrapper {
-    -webkit-transform: translateY(-400%);
-    transform: translateY(-400%);
-}
-
-[class^="top_"] {
-}
-
-[class^="label_"] {
-    display: block;
-    cursor: pointer;
-    line-height: 32px;
-    text-align: center;
-    border-radius: 4px;
-    transition: all 0.3s ease;
-}
-
-[class^="label_"]:focus-within,
-[class^="label_"]:focus,
-[class^="button_"]:focus,
-[class^="button_"]:focus-within,
-ici:focus-within {
-    background-color: ivory;
-    color: gray;
-}
-
-label {
-    margin: 1%;
-}
-
-.carousel-nav-icon {
-    height: 48px;
-    width: 48px;
-}
-
-.col,
-.col-sm,
-.col-md {
-}
-
-.container .anime .card-title {
-    color: white;
-    padding: 2px;
-    border-radius: 5px;
-}
-.container .anime {
-    max-width: 50vw;
-}
-.container .anime .card {
-    margin-top: 2vh;
-    width: 15vw;
-    background-color: rgba(40, 43, 48, 0.75);
-}
-
-.container .anime .card:hover {
-    background-color: rgba(9, 124, 231, 0.75);
-}
-.container .anime .card-img-top {
-    height: 30vh !important;
-    object-fit: cover;
-    opacity: 0.6;
+.displayList {
+    border: solid 0.05rem;
 }
 
 body {
     background-color: rgba(40, 43, 48, 0.75);
+    padding-bottom: 2vh;
 }
 .img-fluid {
     width: 262px;
@@ -212,23 +59,7 @@ body {
 .b-0 {
     bottom: 0;
 }
-.bg-shadow {
-    background: rgba(76, 76, 76, 0);
-    background: -webkit-gradient(
-        left top,
-        left bottom,
-        color-stop(0%, rgba(179, 171, 171, 0)),
-        color-stop(49%, rgba(48, 48, 48, 0.37)),
-        color-stop(100%, rgba(19, 19, 19, 0.8))
-    );
-    background: linear-gradient(
-        to bottom,
-        rgba(179, 171, 171, 0) 0%,
-        rgba(48, 48, 48, 0.71) 49%,
-        rgba(19, 19, 19, 0.8) 100%
-    );
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313', GradientType=0 );
-}
+
 .top-indicator {
     right: 0;
     top: 1rem;
