--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,12 @@ body {
     background: transparent;
     background-size: cover;
 }
+
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
