--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,28 @@
+body {
+    background-color: rgba(40, 43, 48, 0.75);
+    padding-bottom: 2vh;
+    padding-top: 2vh;
+}
+#left {
+    float: left;
+    width: 14vw;
+    margin-left: 3vw;
+}
+
+#right {
+    float: right;
+    width: 14vw;
+    margin-right: 3vw;
+}
+.sideImage {
+    z-index: 1;
+    top: 0;
+    left: 0;
+    margin-top: 3vh;
+}
 .mainContainer {
     background-color: #2e3032;
     padding-top: 2vh;
-    margin-bottom: 2vh;
-    margin-top: 2vh;
 }
 
 .container {
@@ -13,10 +33,6 @@
     border: solid 0.05rem;
 }
 
-body {
-    background-color: rgba(40, 43, 48, 0.75);
-    padding-bottom: 2vh;
-}
 .img-fluid {
     width: 262px;
     height: 226px;
