--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -14,6 +14,16 @@ body {
     width: 14vw;
     margin-right: 3vw;
 }
+
+@media screen and (max-width: 1750px) {
+    #left {
+        display: none;
+    }
+    #right {
+        display: none;
+    }
+}
+
 .sideImage {
     z-index: 1;
     top: 0;
