patched a bit on home front

--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -28,8 +28,8 @@
                         alt=""
                     />
                     <p class="d-inline p-2">
-                        Par {{ article.author.firstname }}
-                        {{ article.author.lastname }}, Rédacteur onlyweebs.com
+                        Par {{ article.author.username }}, Rédacteur
+                        onlyweebs.com
                     </p>
                 </div>
                 <div class="row d-flex justify-content-center">
