--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,7 +29,7 @@
                                     <span class=""></span>
                                 </ng-template>
                                 <div class="row displayList" style="margin: 5%">
-                                    <div class="col-3">
+                                    <div>
                                         <img
                                             class="img-fluid"
                                             src="https://api.onlyweebs.csid.agilitejoviale.fr/image/32"
@@ -37,7 +37,7 @@
                                         />
                                     </div>
 
-                                    <div class="col">
+                                    <div class="col" style="margin-left: 1vw">
                                         <div class="row">
                                             <a routerLink="/lists/{{ list.id }}"
                                                 ><h3>{{ list.name }}</h3></a
