--- a/src/app/anime/anime.component.html
+++ b/src/app/anime/anime.component.html
@@ -1,224 +1,75 @@
-<div *ngIf="anime !== undefined" id="container">
-    <div class="row box" id="page">
-        <div class="col-lg-3 col-md-2 col-sm-2 col-12" id="imgPlace">
+<div class="container text-light">
+    <div class="row">
+        <div class="col">
             <img
-                loading="lazy"
-                src="{{ anime.imgUrl }}"
+                alt=""
                 class="img-fluid"
                 id="cover"
-                alt=""
+                loading="lazy"
+                src="{{ anime.imgUrl }}"
             />
         </div>
-
-        <div class="col-lg-6 col-md-6 col-sm-8 col-12" id="center">
+        <div class="col-8">
             <h1 id="animeTitle">{{ anime.title }}</h1>
-            <div id="parentLists" *ngIf="isConnected">
-                <div class="input-group mb-3" id="default">
-                    <label for="optionSelectDefault"></label>
-                    <select
-                        name="basicList"
-                        class="custom-select custom-select-sm optionSelect"
-                        size="1"
-                        id="optionSelectDefault"
-                        [(ngModel)]="selectedList"
-                    >
-                        <option
-                            *ngFor="let list of userDefaultLists"
-                            [value]="list.name"
-                        >
-                            {{ list.name }}
-                        </option>
-                    </select>
-                    <div class="input-group-prepend">
-                        <button
-                            class="btn btn-outline-secondary addToList"
-                            type="button"
-                            (click)="addAnimeToList()"
-                        >
-                            <i class="fa fa-list"></i> Add to this default list
-                        </button>
-                    </div>
-                </div>
-
-                <div class="input-group mb-3" id="custom" *ngIf="hasCustom">
-                    <label for="optionSelectCustom"></label>
-                    <select
-                        name="basicList"
-                        class="custom-select custom-select-sm optionSelect"
-                        size="1"
-                        id="optionSelectCustom"
-                        [(ngModel)]="selectedList"
-                    >
-                        <option
-                            *ngFor="let list of userCustomLists"
-                            [value]="list.name"
-                        >
-                            {{ list.name }}
-                        </option>
-                    </select>
-                    <div class="input-group-prepend">
-                        <button
-                            class="btn btn-outline-secondary addToList"
-                            type="button"
-                            (click)="addAnimeToList()"
-                        >
-                            <i class="fa fa-list"></i> Add to this custom list
-                        </button>
-                    </div>
-                </div>
-                <div *ngIf="!hasCustom">
-                    <a [routerLink]="['/list-create']">
-                        <button type="button" class="btn btn-primary btn-lg">
-                            Create a custom list
-                        </button>
-                    </a>
-                </div>
-            </div>
             <div class="row">
-                <h1>Synopsis</h1>
-                <p>{{ anime.synopsis }}</p>
+                <div class="col-6">
+                    <div id="parentLists" *ngIf="isConnected">
+                        <div class="input-group mb-3" id="default">
+                            <select
+                                [(ngModel)]="selectedList"
+                                id="optionSelectDefault"
+                                id="slct"
+                                name="slct"
+                                size="1"
+                            >
+                                <option
+                                    *ngFor="let list of userDefaultLists"
+                                    [value]="list.name"
+                                >
+                                    {{ list.name }}
+                                </option>
+                            </select>
+                            <div class="input-group-prepend">
+                                <button
+                                    (click)="addAnimeToList()"
+                                    class="btn btn-primary addToList"
+                                    type="button"
+                                >
+                                    ADD
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
-        <div class="col-lg-2 col-md-3 col-sm-1 col-12" id="divDetails">
-            <div class="row">
-                <h1 class="detailsContent">Details</h1>
-                <p *ngIf="studios" class="detailsContent">
-                    Studio:
-                    {{
-                        studios[0] !== ""
-                            ? studios.toString()
-                            : "not announced yet"
-                    }}
-                </p>
-                <p *ngIf="producers" class="detailsContent">
-                    Producer:
-                    {{
-                        producers[0] !== ""
-                            ? producers.toString()
-                            : "not announced yet"
-                    }}
-                </p>
-                <p class="detailsContent">
-                    Airing Date:
-                    {{
-                        anime.airing !== "None"
-                            ? anime.airing
-                            : "not announced yet"
-                    }}
-                </p>
-                <p *ngIf="genres" class="detailsContent">
-                    Genres :{{
-                        genres[0] !== ""
-                            ? genres.toString()
-                            : "not announced yet"
-                    }}
-                </p>
-                <p class="detailsContent">
-                    Number of episodes:
-                    {{ anime.episodes ? anime.episodes : "not announced yet" }}
-                </p>
-            </div>
-            <div class="row">
-                <h1 class="detailsContent">
-                    Global Rate : {{ globalRate }}/10
-                </h1>
-                <h1 *ngIf="isConnected" class="detailsContent">
-                    My Rating: {{ currentRate }}/10
-                </h1>
-            </div>
-            <div *ngIf="isConnected">
-                <form [formGroup]="rateForm" (ngSubmit)="updateRating()">
-                    <div class="input-group-prepend" id="ratingGroup">
-                        <button id="ratingBtn" class="btn btn-primary">
-                            {{ currentRate ? "Update" : "Add" }}
-                        </button>
-                        <input
-                            type="number"
-                            class="form-control"
-                            id="rate"
-                            formControlName="rate"
-                            min="0"
-                            max="10"
-                            placeholder="Enter your rate"
-                            (ngModelChange)="validateValue($event)"
-                        />
-                    </div>
-                </form>
-            </div>
-        </div>
+        <div class="col"></div>
     </div>
-    <div class="row d-flex justify-content-center">
-        <div
-            *ngIf="comments !== undefined"
-            [ngClass]="
-                isConnected
-                    ? 'col-sm-6 col-md-6 col-6 pb-6'
-                    : 'col-sm-8 col-md-8 col-8 pb-8'
-            "
-        >
-            <h1>Comments</h1>
-            <div
-                *ngFor="let comment of comments; let index = index"
-                class="mt-4 text-justify float-left comment"
-            >
-                <img
-                    loading="lazy"
-                    src="data:image/webp;base64,{{
-                        comment.user.image.content
-                    }}"
-                    alt="profile image"
-                    class="rounded-circle"
-                    width="80"
-                    height="80"
-                />
-                <h4>{{ comment.user.username }}</h4>
-                <span>-{{ comment.date | date: "dd/MM/yyyy" }}</span> <br />
-                <p>{{ comment.body }}</p>
-            </div>
-        </div>
-        <div
-            *ngIf="isConnected"
-            class="
-                col-lg-4 col-md-5 col-sm-4
-                offset-md-1 offset-sm-1
-                col-12
-                mt-4
-            "
-        >
-            <form
-                id="align-form"
-                (ngSubmit)="sendAnimeComment()"
-                [formGroup]="commentForm"
-            >
-                <div class="form-group">
-                    <h1>Leave a comment</h1>
-                    <label for="message">Message</label>
-                    <textarea
-                        name="msg"
-                        id="message"
-                        cols="30"
-                        rows="5"
-                        class="form-control"
-                        formControlName="comment"
-                        style="background-color: black"
-                    ></textarea>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary">
-                        {{ userHasComment ? "Edit Comment" : "Post Comment" }}
-                    </button>
-                    <button
-                        *ngIf="userHasComment"
-                        id="delete-button"
-                        type="button"
-                        class="btn btn-danger"
-                        (click)="deleteAnimeComment()"
-                    >
-                        Delete your comment
-                    </button>
-                </div>
-            </form>
+</div>
+
+<div class="container text-light">
+    <div class="row">
+        <div class="col">
+            <mat-accordion>
+                <mat-expansion-panel expanded>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title> Synopsis </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <p class="synopsis">{{ anime.synopsis }}</p>
+                </mat-expansion-panel>
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title> Details </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <p>I'm visible because I am open</p>
+                </mat-expansion-panel>
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header>
+                        <mat-panel-title> Comments </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <p>I'm visible because I am open</p>
+                </mat-expansion-panel>
+            </mat-accordion>
         </div>
     </div>
 </div>
