--- a/src/app/onelist/onelist.component.css
+++ b/src/app/onelist/onelist.component.css
@@ -47,27 +47,49 @@ td {
     color: red;
 }
 
-#desc {
+.desc {
     font-size: 1vw;
-    text-align: center;
+    text-align: justify;
     text-justify: inter-word;
 }
 #test {
     border-color: transparent !important;
 }
+
+#commentSection {
+    background-color: #2e3032;
+    color: white;
+}
 @media screen and (max-width: 576px) {
-    #desc {
-        font-size: 15px;
+    .desc {
+        font-size: 16px;
     }
 }
 
 @media screen and (max-width: 767px) {
-    #desc {
-        font-size: 15px;
+    .desc {
+        font-size: 16px;
     }
 }
 @media screen and (max-width: 1024px) {
-    #desc {
-        font-size: 15px;
+    .desc {
+        font-size: 16px;
     }
+}
+
+.comment {
+    background-color: rgb(5, 35, 76);
+    float: left;
+    border-radius: 5px;
+    padding-left: 40px;
+    padding-right: 30px;
+    padding-top: 10px;
+    width: 100%;
+}
+
+.comment h4,
+.comment span,
+.darker h4,
+.darker span {
+    display: inline;
 }
