--- a/src/app/onelist/onelist.component.html
+++ b/src/app/onelist/onelist.component.html
@@ -1,7 +1,8 @@
 <div class="container body" style="font-size: large">
     <div class="container text-center header" id="list_title">
         <h3>{{ listInfo.name }}</h3>
-        <p id="desc">{{ listInfo.description }}</p>
+        <p class="desc">Author : {{ listInfo.isOwnedBy.username }}</p>
+        <p class="desc">Description : {{ listInfo.description }}</p>
     </div>
     <div class="table-responsive">
         <table class="table">
@@ -22,7 +23,12 @@
                 >
                     <td id="{{ i + 1 }}">{{ i + 1 }}</td>
                     <td>
-                        <img style="max-height: 72px" src="{{ l.imgUrl }}" />
+                        <img
+                            loading="lazy"
+                            style="max-height: 72px"
+                            src="{{ l.imgUrl }}"
+                            alt=""
+                        />
                     </td>
                     <td>
                         <a [routerLink]="['/animes', l.id]">{{ l.title }}</a>
@@ -47,7 +53,7 @@
                             (click)="open(content)"
                         >
                             <span
-                                ><i class="fa fa-plus-square"></i> add an
+                                ><i class="fa fa-plus-square"></i>add an
                                 anime</span
                             >
                         </button>
@@ -70,6 +76,79 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+    <div id="commentSection" class="row d-flex justify-content-center">
+        <div
+            *ngIf="comments !== undefined"
+            [ngClass]="
+                isConnected
+                    ? 'col-sm-6 col-md-6 col-6 pb-6'
+                    : 'col-sm-8 col-md-8 col-8 pb-8'
+            "
+        >
+            <h1>Comments</h1>
+            <div
+                *ngFor="let comment of comments; let index = index"
+                class="mt-4 text-justify float-left comment"
+            >
+                <img
+                    loading="lazy"
+                    src="data:image/webp;base64,{{
+                        comment.user.image.content
+                    }}"
+                    alt="profile image"
+                    class="rounded-circle"
+                    width="80"
+                    height="80"
+                />
+                <h4>{{ comment.user.username }}</h4>
+                <span>-{{ comment.date | date: "dd/MM/yyyy" }}</span> <br />
+                <p>{{ comment.body }}</p>
+            </div>
+        </div>
+        <div
+            *ngIf="isConnected"
+            class="
+                col-lg-4 col-md-5 col-sm-4
+                offset-md-1 offset-sm-1
+                col-12
+                mt-4
+            "
+        >
+            <form
+                id="align-form"
+                (ngSubmit)="sendListComment()"
+                [formGroup]="commentForm"
+            >
+                <div class="form-group">
+                    <h1>Leave a comment</h1>
+                    <label for="message">Message</label>
+                    <textarea
+                        name="msg"
+                        id="message"
+                        cols="30"
+                        rows="5"
+                        class="form-control"
+                        formControlName="comment"
+                        style="background-color: black"
+                    ></textarea>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">
+                        {{ userHasComment ? "Edit Comment" : "Post Comment" }}
+                    </button>
+                    <button
+                        *ngIf="userHasComment"
+                        id="delete-button"
+                        type="button"
+                        class="btn btn-danger"
+                        (click)="deleteListComment()"
+                    >
+                        Delete your comment
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 <ng-template #content let-modal>
