--- a/src/app/mylists/mylists.component.css
+++ b/src/app/mylists/mylists.component.css
@@ -1,13 +1,4 @@
-.group-list {
-}
-
-#list-def {
-}
-
-#list-cus {
-    display: flex;
-}
-
 .listCustom {
     color: white;
+    text-align: center;
 }
