--- a/src/app/anime-list-display/anime-list-display.component.html
+++ b/src/app/anime-list-display/anime-list-display.component.html
@@ -2,7 +2,7 @@
     <div
         *ngFor="let list of lists; let i = index"
         class="col-lg-5 col-md-6 col-12"
-        id="list"
+        id="{{ !lists[i + 1] && i % 2 === 0 ? 'solo' : 'list' }}"
     >
         <a [routerLink]="['/lists', list.id]" id="boxLink">
             <div class="list col-12 row">
@@ -60,7 +60,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-7 col-lg-7 col-md-7 col-6 containerTxt">
+                <div class="col-xl-9 col-lg-9 col-md-8 col-9 containerTxt">
                     <a [routerLink]="['/lists', list.id]" id="nameList">{{
                         list.name
                     }}</a>
