--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,4 +1,4 @@
-<div class="col button-top">
+<div class="col button-top text-center">
     <button class="btn btn-primary" [routerLink]="['/list-create']">
         Create a new list
     </button>
