--- a/src/app/anime-list-display/anime-list-display.component.html
+++ b/src/app/anime-list-display/anime-list-display.component.html
@@ -60,16 +60,20 @@
                         </div>
                     </div>
                 </div>
-                <div id="divList" class="col-xl-9 col-lg-9 col-md-8 col-9">
-                    <a [routerLink]="['/lists', list.id]" id="nameList">{{
-                        list.name
-                    }}</a>
-                    <p class="textDescList">{{ list.description }}</p>
-                    <p id="owner">écrite par {{ list.isOwnedBy.username }}</p>
+                <div id="divList" class="col-xl-8 col-lg-8 col-md-7 col-8">
+                    <div id="left">
+                        <a [routerLink]="['/lists', list.id]" id="nameList">{{
+                            list.name
+                        }}</a>
+                        <p class="textDescList">{{ list.description }}</p>
+                        <p id="owner">
+                            écrite par {{ list.isOwnedBy.username }}
+                        </p>
+                    </div>
                     <div
+                        id="right"
                         class="deleteButton"
                         *ngIf="isDefault === 'user_custom'"
-                        id="button-div"
                     >
                         <button
                             id="delete-button"
@@ -77,7 +81,7 @@
                             class="btn btn-danger"
                             (click)="delete(list.id)"
                         >
-                            Delete
+                            ✕
                         </button>
                     </div>
                 </div>
